--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png">
-    <style>
-        /* Rule */
-    section{
-        background:#ff1b68
-    }
-    </style>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
     <main>
         <section>
             <h1>Get the freedom you deserve.</h1>
+        </section>
+        <section>
+            <h1>Choose Your Plan</h1>
         </section>
     </main>
 </body>
