Adding some style to the header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="main-header">
         <div>
             <a href="index.html">
                 uHost
