--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="main-header">
-        <div>
+        <div class="main-header__title">
             <a href="index.html">
                 uHost
             </a>
