Understanding an Unexpected inline-block Behaviour

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="main-header">
-        <div class="main-header__title">
+        <div>
             <a href="index.html">
                 uHost
             </a>
